Fix for abstract overlapping buttons on grid list

--- a/app/assets/stylesheets/components/_drs-items-views.scss
+++ b/app/assets/stylesheets/components/_drs-items-views.scss
@@ -125,7 +125,7 @@
     .drs-item-abstract{
       @include clearfix();
       .ellipsis{
-        max-width: 95%;
+        max-width: 80%;
         float: left;
       }
       .ellipsis-toggle{
